--- a/ayuda.html
+++ b/ayuda.html
@@ -86,49 +86,54 @@
 					</ul>
 				</nav>		
 				<p>
-					
-					Aquí encontrarás información verídica sobre el Covid-19, recomendaciones de expertos, ayuda
-psicológica, vídeos de gente como tú contando sus historias durante el confinamiento, además,
-podrás encontrar un chat interactivo para que intercambies tus experiencias.
+					<br>
+					<br>
+					Aquí podrás intercambiar tus experiencias durante el confinamiento con otras personas, además
+de recibir respuestas de psicólogos.
 				</p>
 			</div>
 			
 		</div>
 	</header>
-	<br>
-		<br>
-	<div> <blockquote>
-		<h3>	<p align="justify"><font size="+2" face="Akzidenz-Grotesk BQ L...">
-		La ansiedad puede ser generada por diferentes causas tales como el estrés, el miedo, la preocupación, entre otros.
-Esta misma, normalmente puede producir sudoración, cansancio, una respiración agitada, taquicardia y, en algunos casos, hasta la muerte. 
-
-La ansiedad, puede convertirse en enfermedad y si padeces síntomas como dificultad para trabajar, pensamientos suicidas, exceso de alcohol u de otras sustancias es recomendable que consultes a un especialista.
-
-Los entimientos como la incertidumbre, la rabia, el encierro y el estrés, son emociones que se han experimentado a diario durante el confinamiento a causa del nuevo Covid 19, para mitigar este impacto es recomendable hacer actividad física, comer de una manera balanceada, realizar actividades de relajación y pausas activas, en esta página encontrarás algunas recomendaciones que ayudarán a comprender este tipo de emociones y a crear un entorno más agradable al contrarrestar los efectos psicológicos que se han acrecentado durante la cuarentena.
-				</font></p></h3>
-		</blockquote>
-	</div>
-	
-	
 	
 	<div align="center">
 		<br>
+		
+		
+		
+		<h1>	<p align="center"><font size="+2" face="Akzidenz-Grotesk BQ L...">
+		- Fundación Sergio Urrego -
+				</font></p></h1>
+		
+		<h1>	<p align="center"><font size="+2" face="Akzidenz-Grotesk BQ L...">
+		Si tú o alguien que conoces necesita ayuda...
+				</font></p></h1>
+		
+		<p align="center"><font size="+2" face="Akzidenz-Grotesk BQ L...">
+		Manda un correo electrónico a:
+				</font></p>
+		
+		<br>
+	
+		<p align="center"><font size="+2" face="Akzidenz-Grotesk BQ L...">
+		hablamoscontigo@fundacionsergiourrego.org
+				</font></p>
+		<br>
 		<br>
 		
-
-		<iframe width="560" height="315" src="https://www.youtube.com/embed/ndOs7HQH2hE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v7.0"></script>
 		
-		
+		<div class="fb-comments" data-href="file:///C:/Users/USUARIO/Desktop/Kevin/Re-iniciar/interaccion.html" data-numposts="25" data-width=""></div>
 		
 		<br>
 		
 		</div>
 	
+	
+	
 
 </body>
-	<br>
-		<br>
-		<br>
 	<div>
 		<a href="https://www.funlam.edu.co/" target="new"><img align="right" src="ulogo.png" width="650" height="auto" alt=""/></a>
 		
