--- a/testimonios.html
+++ b/testimonios.html
@@ -81,7 +81,7 @@
 						  <a href="consejos.html">Consejos</a>
 						</li>
 						<li>
-						  <a href="interaccion.html">Interacción</a>
+						  <a href="ayuda.html">Ayuda</a>
 						</li>
 				  </ul>
 				</nav>		
@@ -92,9 +92,7 @@
 los videos, podrás sentirte identificado.
 				</p>
 			</div>
-			<div class="youtube">
-				
-			</div>
+			
 		</div>
 	</header>
 	
